Add logo and tagline

--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
 title                    : "Help at the difficult time of bereavement | Rip.ke"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
+subtitle                 : "commemorate loved ones" # site tagline that appears below site title in masthead
 name                     : "Rip Ke"
 description              : "At Rip.ke Get all the information you need to lighten the bereavement process: from how to write an obituary to obtaining a burail permit. Let us lighten your load in these difficult times."
 url                      : "https://info.rip.ke" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/assets/images/rip.jpg" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : # true, false (default)
 words_per_minute         : 200
