--- a/_config.yml
+++ b/_config.yml
@@ -17,11 +17,11 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "Help at the difficult time of bereavement | Rip.ke"
+title                    : "Practical Help for Difficult Times"
 title_separator          : "-"
-subtitle                 : "commemorate loved ones" # site tagline that appears below site title in masthead
+subtitle                 : "Your Trusted and Practical Guide to Managing Loss and Bereavement" # site tagline that appears below site title in masthead
 name                     : "Rip Ke"
-description              : "At Rip.ke Get all the information you need to lighten the bereavement process: from how to write an obituary to obtaining a burail permit. Let us lighten your load in these difficult times."
+description              : "At Rip.ke Get all the information you need to lighten the bereavement process: clear, practical and simple. Let us lighten your load in these difficult times."
 url                      : "https://info.rip.ke" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
