--- a/_config.yml
+++ b/_config.yml
@@ -105,11 +105,10 @@ social:
 
 # Analytics
 analytics:
-  provider               : # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          :
-    anonymize_ip         : # true, false (default)
-
+    tracking_id          : "G-CH99TD29T7"
+    anonymize_ip         : false # true, false (default)
 
 # Site Author
 author:
