--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
   provider               : "google" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
     tracking_id          : "G-CH99TD29T7"
-    anonymize_ip         : false # true, false (default)
+    anonymize_ip         : # true, false (default)
 
 # Site Author
 author:
