--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google" # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
     tracking_id          : "G-CH99TD29T7"
     anonymize_ip         : # true, false (default)
