--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
-# main links
+  # main links
 main:
-  - title: "Post Obituary"
-    url: https://rip.ke/about
+  # - title: "Quick-Start Guide"
+  #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
@@ -10,3 +10,11 @@ main:
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+  - title: "Home"
+    url: https://rip.ke/
+  - title: "Post Obituary"
+    url: https://rip.ke/about/
+  - title: "Plant Trees"
+    url: https://rip.ke/trees/
+  - title: "Useful Info"
+    url: https://info.rip.ke
