--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,3 +18,5 @@ main:
     url: https://rip.ke/trees/
   - title: "Useful Info"
     url: https://info.rip.ke
+  - title: "Contact Us"
+    url: https://rip.ke/contact/
