Update twitter to x

--- a/_config.yml
+++ b/_config.yml
@@ -125,8 +125,8 @@ author:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://rip.ke"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
+    - label: "X"
+      icon: "fab fa-fw fa-x-twitter"
       url: "https://x.com/rip_kenya"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
@@ -141,8 +141,8 @@ author:
 # Site Footer
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
+    - label: "X"
+      icon: "fab fa-fw fa-x-twitter"
       url: "https://x.com/rip_kenya"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
