Fix latest blog og:image

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
     url: https://rip.ke/post/
   - title: "Plant Trees"
     url: https://rip.ke/trees/
-  - title: "Useful Info"
+  - title: "Resources"
     url: https://info.rip.ke
   - title: "About"
     url: https://rip.ke/about/
